tests/machine/x/kt/map_assign.error
Error on line 0: kotlinc error: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kt/map_assign.kt:3:2: error: unresolved reference. None of the following candidates is applicable because of receiver type mismatch: 
@InlineOnly public inline operator fun <K, V> MutableMap<String, Int>.set(key: String, value: Int): Unit defined in kotlin.collections
@InlineOnly public inline operator fun kotlin.text.StringBuilder /* = java.lang.StringBuilder */.set(index: Int, value: Char): Unit defined in kotlin.text
	scores["bob"] = 2
 ^
/workspace/mochi/tests/machine/x/kt/map_assign.kt:3:8: error: no set method providing array access
	scores["bob"] = 2
       ^

1: fun main() {
