tests/machine/x/kt/map_assign.kt
fun main() {
	var scores = mapOf("alice" to 1)
	scores["bob"] = 2
	println(scores["bob"])
}
